<resources>
    <string name="app_name">Study</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_user_name">User Name</string>
    <string name="nav_header_title">GoStudy</string>
    <string name="nav_header_subtitle">Menu</string>
    <string name="nav_header_user_id">first_name.last_name@mail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--  THIS IS FOR USER CURRENT STATUS-->
    <string name="heart_rate">Heart Rate (BPM): </string>
    <string name="stress_level">Stress Level: </string>
    <string name="skin_temp">Skin Temp (C): </string>

    <!--THIS IS FOR USER PROFILE-->
    <string name="user_birth_date">Birth Date (dd.mm.yyyy): </string>
    <string name="user_height">Height (Cm): </string>
    <string name="user_weight">Weight (Kg): </string>
    <string name="user_gender">Gender : </string>
    <string name="user_disease">Any Disease: </string>


    <!--THIS IS FOR THE POMODORO TIMER-->
    <string name="TIMER">TIMER:</string>
    <string name="start_countdown">Start</string>
    <string name="restart_countdown">Restart</string>
    <string name="hello_first_fragment">25:00</string>

    <!--THIS IS FOR THE LOGIN-->
    <string name="menu_home">Home</string>
    <string name="menu_report">Report</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_page" />
    <string name="current_status">Current Status</string>
    <string name="report">Report</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="textview">This graph shows your eda through your study session.</string>
    <string name="textview2">This graph shows your heart rate through your study session.</string>
    <string name="userSeeData">Want to see your data? click the button</string>
    <string name="load_your_data">load your data</string>
</resources>
