<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/profile_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/secular_one"
        android:text="@string/nav_header_user_name"
        android:textAlignment="center"
        android:textColor="#5C1A55"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anaheim"
        android:text="firstname_lastname@usi.ch"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_user_name" />

    <TextView
        android:id="@+id/profile_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/user_gender"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/profile_height"
        app:layout_constraintTop_toBottomOf="@+id/profile_height"
        app:layout_constraintVertical_bias="0.177" />

    <TextView
        android:id="@+id/profile_disease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/user_disease"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/profile_gender"
        app:layout_constraintTop_toBottomOf="@+id/profile_gender"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/profile_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/user_height"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profile_weight"
        app:layout_constraintTop_toBottomOf="@+id/profile_weight"
        app:layout_constraintVertical_bias="0.132" />

    <TextView
        android:id="@+id/profile_date_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/user_birth_date"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/profile_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/user_weight"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profile_date_of_birth"
        app:layout_constraintTop_toBottomOf="@+id/profile_date_of_birth"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="180dp"
        android:layout_height="146dp"
        android:src="@drawable/ic_menu_profile"
        app:layout_constraintBottom_toTopOf="@+id/profile_date_of_birth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />


</androidx.constraintlayout.widget.ConstraintLayout>