<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/timer_countdownText"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:fontFamily="@font/graduate"
        android:text="@string/hello_first_fragment"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#040404"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TIMER"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="218dp"
        android:layout_height="208dp"
        android:src="@drawable/ic_pomodoro_timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/TIMER"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:fontFamily="@font/graduate"
        android:text="@string/TIMER"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#040404"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437" />

    <Button
        android:id="@+id/buttonStartCountdown"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/comfortaa_bold"
        android:inputType="textCapSentences"
        android:text="@string/start_countdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.253" />

    <Button
        android:id="@+id/pomodoroRestartCountdown"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/comfortaa_bold"
        android:inputType="textCapSentences"
        android:text="Restart"
        app:layout_constraintBottom_toBottomOf="@+id/buttonStartCountdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/buttonStartCountdown"
        app:layout_constraintTop_toTopOf="@+id/buttonStartCountdown"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_back_toMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/comfortaa_bold"
        android:inputType="textCapWords"
        android:text="Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>